--- a/index.html
+++ b/index.html
@@ -1,14 +1,280 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ko" data-theme="dark">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello World</title>
-  <link href='/style.css' rel='stylesheet'>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>자산 시장 대시보드</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <style>
+    :root {
+      --bg-primary: #0f172a;
+      --bg-secondary: #1e293b;
+      --text-primary: #e2e8f0;
+      --text-secondary: #94a3b8;
+      --accent: #3b82f6;
+      --positive: #10b981;
+      --negative: #ef4444;
+      --card-bg: #1e293b;
+    }
+
+    [data-theme="light"] {
+      --bg-primary: #f8fafc;
+      --bg-secondary: #ffffff;
+      --text-primary: #0f172a;
+      --text-secondary: #475569;
+      --card-bg: #ffffff;
+    }
+
+    body {
+      background: var(--bg-primary);
+      color: var(--text-primary);
+      font-family: 'Pretendard', system-ui, sans-serif;
+      min-height: 100vh;
+    }
+
+    .sidebar {
+      background: var(--bg-secondary);
+      border-right: 1px solid #334155;
+    }
+
+    [data-theme="light"] .sidebar {
+      border-right: 1px solid #e2e8f0;
+    }
+
+    .card {
+      background: var(--card-bg);
+      border: 1px solid #334155;
+      border-radius: 12px;
+      box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1);
+    }
+
+    [data-theme="light"] .card {
+      border: 1px solid #e2e8f0;
+      box-shadow: 0 4px 6px -1px rgba(0,0,0,0.05);
+    }
+
+    .positive { color: var(--positive); }
+    .negative { color: var(--negative); }
+  </style>
 </head>
-<body>
-  <h1>Hello, world!</h1>
-  <button onclick="console.log('hello');">Press me</button>
-  <script defer type="text/javascript" src="/main.js"></script>
+<body class="min-h-screen flex flex-col">
+
+  <!-- 상단 헤더 -->
+  <header class="bg-gray-900/80 backdrop-blur-md border-b border-gray-800 sticky top-0 z-50">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-3 flex items-center justify-between">
+      <div class="flex items-center gap-3">
+        <div class="text-2xl font-bold text-blue-400">자산 대시보드</div>
+      </div>
+
+      <!-- 테마 토글 -->
+      <button id="theme-toggle" class="p-2 rounded-lg hover:bg-gray-800 transition">
+        <i id="theme-icon" class="fas fa-moon text-xl"></i>
+      </button>
+    </div>
+  </header>
+
+  <div class="flex flex-1 overflow-hidden">
+
+    <!-- 좌측 사이드바 -->
+    <aside class="sidebar w-64 flex-shrink-0 hidden md:block overflow-y-auto">
+      <nav class="py-6 px-4 space-y-1">
+        <a href="#" class="flex items-center px-4 py-3 rounded-lg bg-blue-600/20 text-blue-400">
+          <i class="fas fa-home mr-3"></i> 대시보드
+        </a>
+        <a href="#" class="flex items-center px-4 py-3 rounded-lg hover:bg-gray-800 transition">
+          <i class="fas fa-coins mr-3"></i> 원자재
+        </a>
+        <a href="#" class="flex items-center px-4 py-3 rounded-lg hover:bg-gray-800 transition">
+          <i class="fas fa-chart-line mr-3"></i> 미국 주식
+        </a>
+        <a href="#" class="flex items-center px-4 py-3 rounded-lg hover:bg-gray-800 transition">
+          <i class="fas fa-building mr-3"></i> 한국 주식
+        </a>
+        <a href="#" class="flex items-center px-4 py-3 rounded-lg hover:bg-gray-800 transition">
+          <i class="fab fa-bitcoin mr-3"></i> 크립토
+        </a>
+      </nav>
+    </aside>
+
+    <!-- 메인 콘텐츠 -->
+    <main class="flex-1 overflow-y-auto p-4 md:p-6">
+
+      <!-- 상단 실시간 지표 바 -->
+      <div class="grid grid-cols-2 sm:grid-cols-4 lg:grid-cols-5 gap-4 mb-8">
+        <div class="card p-4">
+          <div class="text-sm text-gray-400">원/달러 환율</div>
+          <div class="text-xl font-bold">1,435.20 <span class="text-xs positive">+0.42%</span></div>
+        </div>
+        <div class="card p-4">
+          <div class="text-sm text-gray-400">업비트 USDT</div>
+          <div class="text-xl font-bold">1,452.00 <span class="text-xs positive">+1.18%</span></div>
+        </div>
+        <div class="card p-4">
+          <div class="text-sm text-gray-400">빗썸 USDT</div>
+          <div class="text-xl font-bold">1,451.50 <span class="text-xs positive">+1.15%</span></div>
+        </div>
+        <div class="card p-4">
+          <div class="text-sm text-gray-400">김치 프리미엄</div>
+          <div class="text-xl font-bold text-green-400">+1.17%</div>
+        </div>
+        <div class="card p-4 col-span-2 sm:col-span-1">
+          <div class="text-sm text-gray-400">현재 김프 상태</div>
+          <div class="text-lg font-semibold text-green-400">경계 (1~2%)</div>
+        </div>
+      </div>
+
+      <!-- 주요 지수 카드들 -->
+      <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-5 mb-10">
+        <!-- 금 -->
+        <div class="card p-5 hover:shadow-lg transition">
+          <div class="flex items-center justify-between mb-3">
+            <div class="text-lg font-semibold">금 (XAU/USD)</div>
+            <i class="fas fa-sun text-yellow-400"></i>
+          </div>
+          <div class="text-2xl font-bold">2,685.40</div>
+          <div class="text-sm positive">+1.24% (+32.80)</div>
+        </div>
+
+        <!-- 은 -->
+        <div class="card p-5 hover:shadow-lg transition">
+          <div class="flex items-center justify-between mb-3">
+            <div class="text-lg font-semibold">은 (XAG/USD)</div>
+            <i class="fas fa-gem text-gray-300"></i>
+          </div>
+          <div class="text-2xl font-bold">31.85</div>
+          <div class="text-sm positive">+2.15% (+0.67)</div>
+        </div>
+
+        <!-- S&P500 -->
+        <div class="card p-5 hover:shadow-lg transition">
+          <div class="flex items-center justify-between mb-3">
+            <div class="text-lg font-semibold">S&P 500</div>
+            <i class="fas fa-chart-line text-blue-400"></i>
+          </div>
+          <div class="text-2xl font-bold">5,842.01</div>
+          <div class="text-sm negative">-0.38% (-22.31)</div>
+        </div>
+
+        <!-- QQQ -->
+        <div class="card p-5 hover:shadow-lg transition">
+          <div class="flex items-center justify-between mb-3">
+            <div class="text-lg font-semibold">QQQ</div>
+            <i class="fas fa-rocket text-purple-400"></i>
+          </div>
+          <div class="text-2xl font-bold">498.75</div>
+          <div class="text-sm negative">-0.62% (-3.10)</div>
+        </div>
+
+        <!-- 코스피 -->
+        <div class="card p-5 hover:shadow-lg transition">
+          <div class="flex items-center justify-between mb-3">
+            <div class="text-lg font-semibold">코스피</div>
+            <i class="fas fa-building-columns text-red-400"></i>
+          </div>
+          <div class="text-2xl font-bold">2,612.45</div>
+          <div class="text-sm positive">+0.85% (+22.10)</div>
+        </div>
+
+        <!-- 코스닥 -->
+        <div class="card p-5 hover:shadow-lg transition">
+          <div class="flex items-center justify-between mb-3">
+            <div class="text-lg font-semibold">코스닥</div>
+            <i class="fas fa-building-columns text-orange-400"></i>
+          </div>
+          <div class="text-2xl font-bold">842.18</div>
+          <div class="text-sm positive">+1.12% (+9.32)</div>
+        </div>
+
+        <!-- 비트코인 -->
+        <div class="card p-5 hover:shadow-lg transition">
+          <div class="flex items-center justify-between mb-3">
+            <div class="text-lg font-semibold">비트코인</div>
+            <i class="fab fa-bitcoin text-orange-500"></i>
+          </div>
+          <div class="text-2xl font-bold">$98,450</div>
+          <div class="text-sm positive">+2.45% (+$2,350)</div>
+        </div>
+
+        <!-- 이더리움 -->
+        <div class="card p-5 hover:shadow-lg transition">
+          <div class="flex items-center justify-between mb-3">
+            <div class="text-lg font-semibold">이더리움</div>
+            <i class="fab fa-ethereum text-blue-300"></i>
+          </div>
+          <div class="text-2xl font-bold">$3,820</div>
+          <div class="text-sm positive">+1.88% (+$70)</div>
+        </div>
+      </div>
+
+      <!-- 공포탐욕 지수 섹션 -->
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-10">
+        <div class="card p-6">
+          <h3 class="text-lg font-semibold mb-4 flex items-center">
+            <i class="fas fa-skull-crossbones mr-2 text-red-400"></i> 미국 주식 공포탐욕 지수
+          </h3>
+          <div class="text-4xl font-bold text-yellow-400">62</div>
+          <div class="text-sm mt-1">탐욕 (Greed)</div>
+          <div class="mt-4 h-2 bg-gray-700 rounded-full overflow-hidden">
+            <div class="h-full bg-yellow-400 w-[62%]"></div>
+          </div>
+        </div>
+
+        <div class="card p-6">
+          <h3 class="text-lg font-semibold mb-4 flex items-center">
+            <i class="fas fa-skull-crossbones mr-2 text-red-500"></i> 한국 주식 공포탐욕 지수
+          </h3>
+          <div class="text-4xl font-bold text-green-400">79.9</div>
+          <div class="text-sm mt-1">극단적 탐욕</div>
+          <div class="mt-4 h-2 bg-gray-700 rounded-full overflow-hidden">
+            <div class="h-full bg-green-400 w-[80%]"></div>
+          </div>
+        </div>
+
+        <div class="card p-6">
+          <h3 class="text-lg font-semibold mb-4 flex items-center">
+            <i class="fas fa-skull-crossbones mr-2 text-purple-400"></i> 크립토 공포탐욕 지수
+          </h3>
+          <div class="text-4xl font-bold text-orange-400">74</div>
+          <div class="text-sm mt-1">탐욕</div>
+          <div class="mt-4 h-2 bg-gray-700 rounded-full overflow-hidden">
+            <div class="h-full bg-orange-400 w-[74%]"></div>
+          </div>
+        </div>
+      </div>
+
+      <!-- 하단 여유 공간 (나중에 실적 캘린더나 다른 섹션 들어갈 자리) -->
+      <div class="card p-6 text-center text-gray-400">
+        실적 발표 캘린더 / Money Flow / 기타 위젯 자리 (준비 중)
+      </div>
+
+    </main>
+  </div>
+
+  <!-- 테마 토글 스크립트 -->
+  <script>
+    const toggleBtn = document.getElementById('theme-toggle');
+    const icon = document.getElementById('theme-icon');
+    const html = document.documentElement;
+
+    toggleBtn.addEventListener('click', () => {
+      if (html.getAttribute('data-theme') === 'dark') {
+        html.setAttribute('data-theme', 'light');
+        icon.classList.remove('fa-moon');
+        icon.classList.add('fa-sun');
+      } else {
+        html.setAttribute('data-theme', 'dark');
+        icon.classList.remove('fa-sun');
+        icon.classList.add('fa-moon');
+      }
+    });
+
+    // 초기 상태 아이콘 설정
+    if (html.getAttribute('data-theme') === 'light') {
+      icon.classList.remove('fa-moon');
+      icon.classList.add('fa-sun');
+    }
+  </script>
+
 </body>
 </html>
