헤더 지표에 빗썸 USDT 추가

--- a/index.html
+++ b/index.html
@@ -61,37 +61,61 @@
 <body class="min-h-screen flex flex-col">
 
   <!-- 상단 헤더 -->
-  <header class="bg-gray-900/80 backdrop-blur-md border-b border-gray-800 sticky top-0 z-50">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-3 flex items-center justify-between">
-      <div class="flex items-center gap-3">
-        <div class="text-2xl font-bold text-blue-400">자산 대시보드</div>
-      </div>
+<header class="bg-gray-900/80 backdrop-blur-md border-b border-gray-800 sticky top-0 z-50 px-4 sm:px-6 lg:px-8">
+    <div class="flex items-center justify-between h-24 max-w-7xl mx-auto">
+        <!-- Left Side: Title and Subtitle -->
+        <div>
+            <h1 class="text-3xl font-bold text-white">Money Flow 자산 흐름</h1>
+            <p class="text-sm text-gray-400 mt-1">
+                주요 자산들의 가격 현황 및 주요 지표
+                <span class="ml-2 px-2 py-1 bg-gray-700 text-gray-300 rounded-md text-xs">Updated: 오후 12:06:24</span>
+            </p>
+        </div>
 
-      <!-- 테마 토글 -->
-      <button id="theme-toggle" class="p-2 rounded-lg hover:bg-gray-800 transition">
-        <i id="theme-icon" class="fas fa-moon text-xl"></i>
-      </button>
+        <!-- Right Side: Indicators -->
+        <div class="flex items-center space-x-4">
+            <div class="card p-3 rounded-lg text-center bg-gray-800 hidden md:block">
+                <div class="text-xs text-gray-400">$ 원/달러 환율</div>
+                <div class="text-lg font-bold text-white">1449.4원</div>
+            </div>
+            <div class="card p-3 rounded-lg text-center bg-gray-800 hidden md:block">
+                <div class="text-xs text-gray-400">업비트 USDT</div>
+                <div class="text-lg font-bold text-white">₩1,477</div>
+            </div>
+            <div class="card p-3 rounded-lg text-center bg-gray-800 hidden md:block">
+                <div class="text-xs text-gray-400">빗썸 USDT</div>
+                <div class="text-lg font-bold text-white">₩1,477</div>
+            </div>
+            <div class="card p-3 rounded-lg text-center bg-gray-800 hidden md:block">
+                <div class="text-xs text-gray-400">김치프리미엄 (USDT)</div>
+                <div class="text-lg font-bold text-green-500">+1.88%</div>
+            </div>
+             <button id="theme-toggle" class="p-2 rounded-lg hover:bg-gray-800 transition">
+                <i id="theme-icon" class="fas fa-moon text-xl"></i>
+             </button>
+        </div>
     </div>
-  </header>
+</header>
+
 
   <div class="flex flex-1 overflow-hidden">
 
-    <!-- 좌측 사이드바 -->
+    <!-- 좌측 사이드바 (기존과 동일) -->
     <aside class="sidebar w-64 flex-shrink-0 hidden md:block overflow-y-auto">
       <nav class="py-6 px-4 space-y-1">
         <a href="#" class="flex items-center px-4 py-3 rounded-lg bg-blue-600/20 text-blue-400">
           <i class="fas fa-home mr-3"></i> 대시보드
         </a>
-        <a href="#" class="flex items-center px-4 py-3 rounded-lg hover:bg-gray-800 transition">
+        <a href="#commodities" class="flex items-center px-4 py-3 rounded-lg hover:bg-gray-800 transition">
           <i class="fas fa-coins mr-3"></i> 원자재
         </a>
-        <a href="#" class="flex items-center px-4 py-3 rounded-lg hover:bg-gray-800 transition">
+        <a href="#us-stocks" class="flex items-center px-4 py-3 rounded-lg hover:bg-gray-800 transition">
           <i class="fas fa-chart-line mr-3"></i> 미국 주식
         </a>
-        <a href="#" class="flex items-center px-4 py-3 rounded-lg hover:bg-gray-800 transition">
+        <a href="#korean-stocks" class="flex items-center px-4 py-3 rounded-lg hover:bg-gray-800 transition">
           <i class="fas fa-building mr-3"></i> 한국 주식
         </a>
-        <a href="#" class="flex items-center px-4 py-3 rounded-lg hover:bg-gray-800 transition">
+        <a href="#crypto" class="flex items-center px-4 py-3 rounded-lg hover:bg-gray-800 transition">
           <i class="fab fa-bitcoin mr-3"></i> 크립토
         </a>
       </nav>
@@ -100,151 +124,173 @@
     <!-- 메인 콘텐츠 -->
     <main class="flex-1 overflow-y-auto p-4 md:p-6">
 
-      <!-- 상단 실시간 지표 바 -->
-      <div class="grid grid-cols-2 sm:grid-cols-4 lg:grid-cols-5 gap-4 mb-8">
-        <div class="card p-4">
-          <div class="text-sm text-gray-400">원/달러 환율</div>
-          <div class="text-xl font-bold">1,435.20 <span class="text-xs positive">+0.42%</span></div>
-        </div>
-        <div class="card p-4">
-          <div class="text-sm text-gray-400">업비트 USDT</div>
-          <div class="text-xl font-bold">1,452.00 <span class="text-xs positive">+1.18%</span></div>
-        </div>
-        <div class="card p-4">
-          <div class="text-sm text-gray-400">빗썸 USDT</div>
-          <div class="text-xl font-bold">1,451.50 <span class="text-xs positive">+1.15%</span></div>
-        </div>
-        <div class="card p-4">
-          <div class="text-sm text-gray-400">김치 프리미엄</div>
-          <div class="text-xl font-bold text-green-400">+1.17%</div>
-        </div>
-        <div class="card p-4 col-span-2 sm:col-span-1">
-          <div class="text-sm text-gray-400">현재 김프 상태</div>
-          <div class="text-lg font-semibold text-green-400">경계 (1~2%)</div>
-        </div>
-      </div>
+      <!-- 섹션별 자산 그룹 -->
+      <div class="space-y-10">
 
-      <!-- 주요 지수 카드들 -->
-      <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-5 mb-10">
-        <!-- 금 -->
-        <div class="card p-5 hover:shadow-lg transition">
-          <div class="flex items-center justify-between mb-3">
-            <div class="text-lg font-semibold">금 (XAU/USD)</div>
-            <i class="fas fa-sun text-yellow-400"></i>
+        <!-- 원자재 섹션 -->
+        <section id="commodities">
+          <h2 class="text-2xl font-bold mb-4 border-l-4 border-blue-400 pl-3">원자재</h2>
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+            <!-- 금 -->
+            <div class="card p-5 flex flex-col justify-between hover:shadow-lg transition">
+              <div class="flex items-center justify-between mb-3">
+                <div class="text-lg font-semibold">금 (XAU/USD)</div>
+                <i class="fas fa-sun text-yellow-400"></i>
+              </div>
+              <div>
+                <div class="text-2xl font-bold">2,685.40</div>
+                <div class="text-sm positive">+1.24% (+32.80)</div>
+              </div>
+            </div>
+            <!-- 은 -->
+            <div class="card p-5 flex flex-col justify-between hover:shadow-lg transition">
+              <div class="flex items-center justify-between mb-3">
+                <div class="text-lg font-semibold">은 (XAG/USD)</div>
+                <i class="fas fa-gem text-gray-300"></i>
+              </div>
+              <div>
+                <div class="text-2xl font-bold">31.85</div>
+                <div class="text-sm positive">+2.15% (+0.67)</div>
+              </div>
+            </div>
+            <!-- 금 공포탐욕 지수 -->
+            <div class="card p-6 md:col-span-2">
+              <h3 class="text-lg font-semibold mb-4 flex items-center">
+                <i class="fas fa-sun mr-2 text-yellow-400"></i> 금 공포 탐욕지수
+              </h3>
+              <div class="text-4xl font-bold text-gray-400">50</div>
+              <div class="text-sm mt-1">중립 (Neutral)</div>
+              <div class="mt-4 h-2 bg-gray-700 rounded-full overflow-hidden">
+                <div class="h-full bg-gray-400 w-[50%]"></div>
+              </div>
+            </div>
           </div>
-          <div class="text-2xl font-bold">2,685.40</div>
-          <div class="text-sm positive">+1.24% (+32.80)</div>
-        </div>
+        </section>
 
-        <!-- 은 -->
-        <div class="card p-5 hover:shadow-lg transition">
-          <div class="flex items-center justify-between mb-3">
-            <div class="text-lg font-semibold">은 (XAG/USD)</div>
-            <i class="fas fa-gem text-gray-300"></i>
+        <!-- 미국 주식 섹션 -->
+        <section id="us-stocks">
+          <h2 class="text-2xl font-bold mb-4 border-l-4 border-blue-400 pl-3">미국 주식</h2>
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+            <!-- S&P500 -->
+            <div class="card p-5 flex flex-col justify-between hover:shadow-lg transition">
+              <div class="flex items-center justify-between mb-3">
+                <div class="text-lg font-semibold">S&P 500</div>
+                <i class="fas fa-chart-line text-blue-400"></i>
+              </div>
+              <div>
+                <div class="text-2xl font-bold">5,842.01</div>
+                <div class="text-sm negative">-0.38% (-22.31)</div>
+              </div>
+            </div>
+            <!-- QQQ -->
+            <div class="card p-5 flex flex-col justify-between hover:shadow-lg transition">
+              <div class="flex items-center justify-between mb-3">
+                <div class="text-lg font-semibold">QQQ</div>
+                <i class="fas fa-rocket text-purple-400"></i>
+              </div>
+              <div>
+                <div class="text-2xl font-bold">498.75</div>
+                <div class="text-sm negative">-0.62% (-3.10)</div>
+              </div>
+            </div>
+            <!-- 미국 주식 공포탐욕 지수 -->
+            <div class="card p-6 md:col-span-2">
+              <h3 class="text-lg font-semibold mb-4 flex items-center">
+                <i class="fas fa-skull-crossbones mr-2 text-red-400"></i> 미국 주식 공포탐욕 지수
+              </h3>
+              <div class="text-4xl font-bold text-yellow-400">62</div>
+              <div class="text-sm mt-1">탐욕 (Greed)</div>
+              <div class="mt-4 h-2 bg-gray-700 rounded-full overflow-hidden">
+                <div class="h-full bg-yellow-400 w-[62%]"></div>
+              </div>
+            </div>
           </div>
-          <div class="text-2xl font-bold">31.85</div>
-          <div class="text-sm positive">+2.15% (+0.67)</div>
-        </div>
+        </section>
 
-        <!-- S&P500 -->
-        <div class="card p-5 hover:shadow-lg transition">
-          <div class="flex items-center justify-between mb-3">
-            <div class="text-lg font-semibold">S&P 500</div>
-            <i class="fas fa-chart-line text-blue-400"></i>
+        <!-- 한국 주식 섹션 -->
+        <section id="korean-stocks">
+          <h2 class="text-2xl font-bold mb-4 border-l-4 border-blue-400 pl-3">한국 주식</h2>
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+            <!-- 코스피 -->
+            <div class="card p-5 flex flex-col justify-between hover:shadow-lg transition">
+              <div class="flex items-center justify-between mb-3">
+                <div class="text-lg font-semibold">코스피</div>
+                <i class="fas fa-building-columns text-red-400"></i>
+              </div>
+              <div>
+                <div class="text-2xl font-bold">2,612.45</div>
+                <div class="text-sm positive">+0.85% (+22.10)</div>
+              </div>
+            </div>
+            <!-- 코스닥 -->
+            <div class="card p-5 flex flex-col justify-between hover:shadow-lg transition">
+              <div class="flex items-center justify-between mb-3">
+                <div class="text-lg font-semibold">코스닥</div>
+                <i class="fas fa-building-columns text-orange-400"></i>
+              </div>
+              <div>
+                <div class="text-2xl font-bold">842.18</div>
+                <div class="text-sm positive">+1.12% (+9.32)</div>
+              </div>
+            </div>
+            <!-- 한국 주식 공포탐욕 지수 -->
+            <div class="card p-6 md:col-span-2">
+              <h3 class="text-lg font-semibold mb-4 flex items-center">
+                <i class="fas fa-skull-crossbones mr-2 text-red-500"></i> 한국 주식 공포탐욕 지수
+              </h3>
+              <div class="text-4xl font-bold text-green-400">79.9</div>
+              <div class="text-sm mt-1">극단적 탐욕</div>
+              <div class="mt-4 h-2 bg-gray-700 rounded-full overflow-hidden">
+                <div class="h-full bg-green-400 w-[80%]"></div>
+              </div>
+            </div>
           </div>
-          <div class="text-2xl font-bold">5,842.01</div>
-          <div class="text-sm negative">-0.38% (-22.31)</div>
-        </div>
+        </section>
 
-        <!-- QQQ -->
-        <div class="card p-5 hover:shadow-lg transition">
-          <div class="flex items-center justify-between mb-3">
-            <div class="text-lg font-semibold">QQQ</div>
-            <i class="fas fa-rocket text-purple-400"></i>
+        <!-- 크립토 섹션 -->
+        <section id="crypto">
+          <h2 class="text-2xl font-bold mb-4 border-l-4 border-blue-400 pl-3">크립토</h2>
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+            <!-- 비트코인 -->
+            <div class="card p-5 flex flex-col justify-between hover:shadow-lg transition">
+              <div class="flex items-center justify-between mb-3">
+                <div class="text-lg font-semibold">비트코인</div>
+                <i class="fab fa-bitcoin text-orange-500"></i>
+              </div>
+              <div>
+                <div class="text-2xl font-bold">$98,450</div>
+                <div class="text-sm positive">+2.45% (+$2,350)</div>
+              </div>
+            </div>
+            <!-- 이더리움 -->
+            <div class="card p-5 flex flex-col justify-between hover:shadow-lg transition">
+              <div class="flex items-center justify-between mb-3">
+                <div class="text-lg font-semibold">이더리움</div>
+                <i class="fab fa-ethereum text-blue-300"></i>
+              </div>
+              <div>
+                <div class="text-2xl font-bold">$3,820</div>
+                <div class="text-sm positive">+1.88% (+$70)</div>
+              </div>
+            </div>
+            <!-- 크립토 공포탐욕 지수 -->
+            <div class="card p-6 md:col-span-2">
+              <h3 class="text-lg font-semibold mb-4 flex items-center">
+                <i class="fas fa-skull-crossbones mr-2 text-purple-400"></i> 크립토 공포탐욕 지수
+              </h3>
+              <div class="text-4xl font-bold text-orange-400">74</div>
+              <div class="text-sm mt-1">탐욕</div>
+              <div class="mt-4 h-2 bg-gray-700 rounded-full overflow-hidden">
+                <div class="h-full bg-orange-400 w-[74%]"></div>
+              </div>
+            </div>
           </div>
-          <div class="text-2xl font-bold">498.75</div>
-          <div class="text-sm negative">-0.62% (-3.10)</div>
-        </div>
+        </section>
 
-        <!-- 코스피 -->
-        <div class="card p-5 hover:shadow-lg transition">
-          <div class="flex items-center justify-between mb-3">
-            <div class="text-lg font-semibold">코스피</div>
-            <i class="fas fa-building-columns text-red-400"></i>
-          </div>
-          <div class="text-2xl font-bold">2,612.45</div>
-          <div class="text-sm positive">+0.85% (+22.10)</div>
-        </div>
-
-        <!-- 코스닥 -->
-        <div class="card p-5 hover:shadow-lg transition">
-          <div class="flex items-center justify-between mb-3">
-            <div class="text-lg font-semibold">코스닥</div>
-            <i class="fas fa-building-columns text-orange-400"></i>
-          </div>
-          <div class="text-2xl font-bold">842.18</div>
-          <div class="text-sm positive">+1.12% (+9.32)</div>
-        </div>
-
-        <!-- 비트코인 -->
-        <div class="card p-5 hover:shadow-lg transition">
-          <div class="flex items-center justify-between mb-3">
-            <div class="text-lg font-semibold">비트코인</div>
-            <i class="fab fa-bitcoin text-orange-500"></i>
-          </div>
-          <div class="text-2xl font-bold">$98,450</div>
-          <div class="text-sm positive">+2.45% (+$2,350)</div>
-        </div>
-
-        <!-- 이더리움 -->
-        <div class="card p-5 hover:shadow-lg transition">
-          <div class="flex items-center justify-between mb-3">
-            <div class="text-lg font-semibold">이더리움</div>
-            <i class="fab fa-ethereum text-blue-300"></i>
-          </div>
-          <div class="text-2xl font-bold">$3,820</div>
-          <div class="text-sm positive">+1.88% (+$70)</div>
-        </div>
-      </div>
-
-      <!-- 공포탐욕 지수 섹션 -->
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-10">
-        <div class="card p-6">
-          <h3 class="text-lg font-semibold mb-4 flex items-center">
-            <i class="fas fa-skull-crossbones mr-2 text-red-400"></i> 미국 주식 공포탐욕 지수
-          </h3>
-          <div class="text-4xl font-bold text-yellow-400">62</div>
-          <div class="text-sm mt-1">탐욕 (Greed)</div>
-          <div class="mt-4 h-2 bg-gray-700 rounded-full overflow-hidden">
-            <div class="h-full bg-yellow-400 w-[62%]"></div>
-          </div>
-        </div>
-
-        <div class="card p-6">
-          <h3 class="text-lg font-semibold mb-4 flex items-center">
-            <i class="fas fa-skull-crossbones mr-2 text-red-500"></i> 한국 주식 공포탐욕 지수
-          </h3>
-          <div class="text-4xl font-bold text-green-400">79.9</div>
-          <div class="text-sm mt-1">극단적 탐욕</div>
-          <div class="mt-4 h-2 bg-gray-700 rounded-full overflow-hidden">
-            <div class="h-full bg-green-400 w-[80%]"></div>
-          </div>
-        </div>
-
-        <div class="card p-6">
-          <h3 class="text-lg font-semibold mb-4 flex items-center">
-            <i class="fas fa-skull-crossbones mr-2 text-purple-400"></i> 크립토 공포탐욕 지수
-          </h3>
-          <div class="text-4xl font-bold text-orange-400">74</div>
-          <div class="text-sm mt-1">탐욕</div>
-          <div class="mt-4 h-2 bg-gray-700 rounded-full overflow-hidden">
-            <div class="h-full bg-orange-400 w-[74%]"></div>
-          </div>
-        </div>
       </div>
 
       <!-- 하단 여유 공간 (나중에 실적 캘린더나 다른 섹션 들어갈 자리) -->
-      <div class="card p-6 text-center text-gray-400">
+      <div class="card p-6 text-center text-gray-400 mt-10">
         실적 발표 캘린더 / Money Flow / 기타 위젯 자리 (준비 중)
       </div>
 
