--- a/index.html
+++ b/index.html
@@ -54,8 +54,62 @@
       box-shadow: 0 4px 6px -1px rgba(0,0,0,0.05);
     }
 
-    .positive { color: var(--positive); }
     .negative { color: var(--negative); }
+
+    .gauge-container {
+      position: relative;
+      width: 100%;
+      height: 120px;
+      overflow: hidden;
+    }
+    .gauge-semi-circle {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 240px;
+      border-radius: 50% 50% 50% 50% / 100% 100% 0% 0%;
+      background: linear-gradient(to right, #ef4444, #f59e0b, #10b981);
+    }
+    .gauge-mask {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      width: calc(100% - 20px);
+      height: 220px;
+      background: var(--card-bg);
+      border-radius: 50% 50% 50% 50% / 100% 100% 0% 0%;
+    }
+    .gauge-needle {
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      width: 2px;
+      height: 50%;
+      background: var(--text-primary);
+      transform-origin: bottom center;
+      transition: transform 0.5s ease-in-out;
+    }
+    .gauge-center-point {
+      position: absolute;
+      bottom: -5px;
+      left: 50%;
+      width: 10px;
+      height: 10px;
+      background: var(--text-primary);
+      border-radius: 50%;
+      transform: translateX(-50%);
+    }
+    .gauge-labels {
+      display: flex;
+      justify-content: space-between;
+      position: absolute;
+      bottom: 10px;
+      width: 100%;
+      padding: 0 10px;
+      font-size: 10px;
+      color: var(--text-secondary);
+    }
   </style>
 </head>
 <body class="min-h-screen flex flex-col">
@@ -65,29 +119,29 @@
     <div class="flex items-center justify-between h-24 max-w-7xl mx-auto">
         <!-- Left Side: Title and Subtitle -->
         <div>
-            <h1 class="text-3xl font-bold text-white">Money Flow 자산 흐름</h1>
-            <p class="text-sm text-gray-400 mt-1">
+            <h1 class="text-3xl font-bold" style="color: var(--text-primary);">Money Flow 자산 흐름</h1>
+            <p class="text-sm mt-1" style="color: var(--text-secondary);">
                 주요 자산들의 가격 현황 및 주요 지표
-                <span class="ml-2 px-2 py-1 bg-gray-700 text-gray-300 rounded-md text-xs">Updated: 오후 12:06:24</span>
+                <span class="ml-2 px-2 py-1 rounded-md text-xs" style="background-color: var(--bg-secondary); color: var(--text-secondary);">Updated: 오후 12:06:24</span>
             </p>
         </div>
 
         <!-- Right Side: Indicators -->
         <div class="flex items-center space-x-4">
-            <div class="card p-3 rounded-lg text-center bg-gray-800 hidden md:block">
-                <div class="text-xs text-gray-400">$ 원/달러 환율</div>
-                <div class="text-lg font-bold text-white">1449.4원</div>
+            <div class="card p-3 rounded-lg text-center hidden md:block" style="background-color: var(--card-bg);">
+                <div class="text-xs" style="color: var(--text-secondary);">$ 원/달러 환율</div>
+                <div class="text-lg font-bold" style="color: var(--text-primary);">1449.4원</div>
             </div>
-            <div class="card p-3 rounded-lg text-center bg-gray-800 hidden md:block">
-                <div class="text-xs text-gray-400">업비트 USDT</div>
-                <div class="text-lg font-bold text-white">₩1,477</div>
+            <div class="card p-3 rounded-lg text-center hidden md:block" style="background-color: var(--card-bg);">
+                <div class="text-xs" style="color: var(--text-secondary);">업비트 USDT</div>
+                <div class="text-lg font-bold" style="color: var(--text-primary);">₩1,477</div>
             </div>
-            <div class="card p-3 rounded-lg text-center bg-gray-800 hidden md:block">
-                <div class="text-xs text-gray-400">빗썸 USDT</div>
-                <div class="text-lg font-bold text-white">₩1,477</div>
+            <div class="card p-3 rounded-lg text-center hidden md:block" style="background-color: var(--card-bg);">
+                <div class="text-xs" style="color: var(--text-secondary);">빗썸 USDT</div>
+                <div class="text-lg font-bold" style="color: var(--text-primary);">₩1,477</div>
             </div>
-            <div class="card p-3 rounded-lg text-center bg-gray-800 hidden md:block">
-                <div class="text-xs text-gray-400">김치프리미엄 (USDT)</div>
+            <div class="card p-3 rounded-lg text-center hidden md:block" style="background-color: var(--card-bg);">
+                <div class="text-xs" style="color: var(--text-secondary);">김치프리미엄 (USDT)</div>
                 <div class="text-lg font-bold text-green-500">+1.88%</div>
             </div>
              <button id="theme-toggle" class="p-2 rounded-lg hover:bg-gray-800 transition">
@@ -123,177 +177,165 @@
 
     <!-- 메인 콘텐츠 -->
     <main class="flex-1 overflow-y-auto p-4 md:p-6">
-
-      <!-- 섹션별 자산 그룹 -->
-      <div class="space-y-10">
-
+      <div class="grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-4 gap-6">
+        
         <!-- 원자재 섹션 -->
-        <section id="commodities">
-          <h2 class="text-2xl font-bold mb-4 border-l-4 border-blue-400 pl-3">원자재</h2>
-          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
-            <!-- 금 -->
-            <div class="card p-5 flex flex-col justify-between hover:shadow-lg transition">
-              <div class="flex items-center justify-between mb-3">
-                <div class="text-lg font-semibold">금 (XAU/USD)</div>
-                <i class="fas fa-sun text-yellow-400"></i>
-              </div>
-              <div>
-                <div class="text-2xl font-bold">2,685.40</div>
-                <div class="text-sm positive">+1.24% (+32.80)</div>
+        <section class="card p-6 space-y-4">
+          <h2 class="text-2xl font-bold border-l-4 border-blue-400 pl-3">원자재</h2>
+          <!-- 금 -->
+          <div class="card p-4 hover:shadow-lg transition">
+            <div class="flex items-center justify-between">
+              <div class="text-lg font-semibold">금 (GLD)</div>
+              <i class="fas fa-sun text-yellow-400"></i>
+            </div>
+            <div class="text-2xl font-bold mt-1">2,685.40</div>
+            <div class="text-sm positive">+1.24% (+32.80)</div>
+          </div>
+          <!-- 은 -->
+          <div class="card p-4 hover:shadow-lg transition">
+            <div class="flex items-center justify-between">
+              <div class="text-lg font-semibold">은 (SLV)</div>
+              <i class="fas fa-gem text-gray-300"></i>
+            </div>
+            <div class="text-2xl font-bold mt-1">31.85</div>
+            <div class="text-sm positive">+2.15% (+0.67)</div>
+          </div>
+          <!-- 금 공포 탐욕 지수 -->
+          <div class="card p-4">
+            <h3 class="text-lg font-semibold text-center mb-2">금 공포 탐욕 지수 (Fear & Greed)</h3>
+            <div class="gauge-container">
+              <div class="gauge-semi-circle"></div>
+              <div class="gauge-mask"></div>
+              <div class="gauge-needle" style="transform: translateX(-50%) rotate(calc(50 * 1.8deg - 90deg));"></div>
+              <div class="gauge-center-point"></div>
+              <div class="gauge-labels">
+                <span>0</span>
+                <span>100</span>
               </div>
             </div>
-            <!-- 은 -->
-            <div class="card p-5 flex flex-col justify-between hover:shadow-lg transition">
-              <div class="flex items-center justify-between mb-3">
-                <div class="text-lg font-semibold">은 (XAG/USD)</div>
-                <i class="fas fa-gem text-gray-300"></i>
-              </div>
-              <div>
-                <div class="text-2xl font-bold">31.85</div>
-                <div class="text-sm positive">+2.15% (+0.67)</div>
-              </div>
-            </div>
-            <!-- 금 공포탐욕 지수 -->
-            <div class="card p-6 md:col-span-2">
-              <h3 class="text-lg font-semibold mb-4 flex items-center">
-                <i class="fas fa-sun mr-2 text-yellow-400"></i> 금 공포 탐욕지수
-              </h3>
-              <div class="text-4xl font-bold text-gray-400">50</div>
-              <div class="text-sm mt-1">중립 (Neutral)</div>
-              <div class="mt-4 h-2 bg-gray-700 rounded-full overflow-hidden">
-                <div class="h-full bg-gray-400 w-[50%]"></div>
-              </div>
-            </div>
+            <div class="text-center text-2xl font-bold mt-2">50 <span class="text-base">(Neutral)</span></div>
           </div>
         </section>
 
         <!-- 미국 주식 섹션 -->
-        <section id="us-stocks">
-          <h2 class="text-2xl font-bold mb-4 border-l-4 border-blue-400 pl-3">미국 주식</h2>
-          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+        <section class="card p-6 space-y-4">
+          <h2 class="text-2xl font-bold border-l-4 border-blue-400 pl-3">미국 주식</h2>
             <!-- S&P500 -->
-            <div class="card p-5 flex flex-col justify-between hover:shadow-lg transition">
-              <div class="flex items-center justify-between mb-3">
+            <div class="card p-4 hover:shadow-lg transition">
+              <div class="flex items-center justify-between">
                 <div class="text-lg font-semibold">S&P 500</div>
                 <i class="fas fa-chart-line text-blue-400"></i>
               </div>
-              <div>
-                <div class="text-2xl font-bold">5,842.01</div>
-                <div class="text-sm negative">-0.38% (-22.31)</div>
-              </div>
+              <div class="text-2xl font-bold mt-1">5,842.01</div>
+              <div class="text-sm negative">-0.38% (-22.31)</div>
             </div>
             <!-- QQQ -->
-            <div class="card p-5 flex flex-col justify-between hover:shadow-lg transition">
-              <div class="flex items-center justify-between mb-3">
-                <div class="text-lg font-semibold">QQQ</div>
+            <div class="card p-4 hover:shadow-lg transition">
+              <div class="flex items-center justify-between">
+                <div class="text-lg font-semibold">QQQ (나스닥 100)</div>
                 <i class="fas fa-rocket text-purple-400"></i>
               </div>
-              <div>
-                <div class="text-2xl font-bold">498.75</div>
-                <div class="text-sm negative">-0.62% (-3.10)</div>
-              </div>
+              <div class="text-2xl font-bold mt-1">498.75</div>
+              <div class="text-sm negative">-0.62% (-3.10)</div>
             </div>
             <!-- 미국 주식 공포탐욕 지수 -->
-            <div class="card p-6 md:col-span-2">
-              <h3 class="text-lg font-semibold mb-4 flex items-center">
-                <i class="fas fa-skull-crossbones mr-2 text-red-400"></i> 미국 주식 공포탐욕 지수
-              </h3>
-              <div class="text-4xl font-bold text-yellow-400">62</div>
-              <div class="text-sm mt-1">탐욕 (Greed)</div>
-              <div class="mt-4 h-2 bg-gray-700 rounded-full overflow-hidden">
-                <div class="h-full bg-yellow-400 w-[62%]"></div>
+            <div class="card p-4">
+              <h3 class="text-lg font-semibold text-center mb-2">미국 주식 공포 탐욕 지수 (Fear & Greed)</h3>
+              <div class="gauge-container">
+                <div class="gauge-semi-circle"></div>
+                <div class="gauge-mask"></div>
+                <div class="gauge-needle" style="transform: translateX(-50%) rotate(calc(62 * 1.8deg - 90deg));"></div>
+                <div class="gauge-center-point"></div>
+                <div class="gauge-labels">
+                  <span>Extreme Fear</span>
+                  <span>Extreme Greed</span>
+                </div>
               </div>
+              <div class="text-center text-2xl font-bold mt-2">62 <span class="text-base">(Greed)</span></div>
             </div>
-          </div>
         </section>
 
         <!-- 한국 주식 섹션 -->
-        <section id="korean-stocks">
-          <h2 class="text-2xl font-bold mb-4 border-l-4 border-blue-400 pl-3">한국 주식</h2>
-          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+        <section class="card p-6 space-y-4">
+          <h2 class="text-2xl font-bold border-l-4 border-blue-400 pl-3">한국 주식</h2>
             <!-- 코스피 -->
-            <div class="card p-5 flex flex-col justify-between hover:shadow-lg transition">
-              <div class="flex items-center justify-between mb-3">
+            <div class="card p-4 hover:shadow-lg transition">
+              <div class="flex items-center justify-between">
                 <div class="text-lg font-semibold">코스피</div>
                 <i class="fas fa-building-columns text-red-400"></i>
               </div>
-              <div>
-                <div class="text-2xl font-bold">2,612.45</div>
-                <div class="text-sm positive">+0.85% (+22.10)</div>
-              </div>
+              <div class="text-2xl font-bold mt-1">2,612.45</div>
+              <div class="text-sm positive">+0.85% (+22.10)</div>
             </div>
             <!-- 코스닥 -->
-            <div class="card p-5 flex flex-col justify-between hover:shadow-lg transition">
-              <div class="flex items-center justify-between mb-3">
+            <div class="card p-4 hover:shadow-lg transition">
+              <div class="flex items-center justify-between">
                 <div class="text-lg font-semibold">코스닥</div>
                 <i class="fas fa-building-columns text-orange-400"></i>
               </div>
-              <div>
-                <div class="text-2xl font-bold">842.18</div>
-                <div class="text-sm positive">+1.12% (+9.32)</div>
-              </div>
+              <div class="text-2xl font-bold mt-1">842.18</div>
+              <div class="text-sm positive">+1.12% (+9.32)</div>
             </div>
             <!-- 한국 주식 공포탐욕 지수 -->
-            <div class="card p-6 md:col-span-2">
-              <h3 class="text-lg font-semibold mb-4 flex items-center">
-                <i class="fas fa-skull-crossbones mr-2 text-red-500"></i> 한국 주식 공포탐욕 지수
-              </h3>
-              <div class="text-4xl font-bold text-green-400">79.9</div>
-              <div class="text-sm mt-1">극단적 탐욕</div>
-              <div class="mt-4 h-2 bg-gray-700 rounded-full overflow-hidden">
-                <div class="h-full bg-green-400 w-[80%]"></div>
+            <div class="card p-4">
+              <h3 class="text-lg font-semibold text-center mb-2">한국 주식 공포 탐욕 지수 (Fear & Greed)</h3>
+              <div class="gauge-container">
+                <div class="gauge-semi-circle"></div>
+                <div class="gauge-mask"></div>
+                <div class="gauge-needle" style="transform: translateX(-50%) rotate(calc(79.9 * 1.8deg - 90deg));"></div>
+                <div class="gauge-center-point"></div>
+                 <div class="gauge-labels">
+                  <span>V.Fear</span>
+                  <span>V.Greed</span>
+                </div>
               </div>
+              <div class="text-center text-2xl font-bold mt-2">79.9 <span class="text-base">(Extreme Greed)</span></div>
             </div>
-          </div>
         </section>
 
         <!-- 크립토 섹션 -->
-        <section id="crypto">
-          <h2 class="text-2xl font-bold mb-4 border-l-4 border-blue-400 pl-3">크립토</h2>
-          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+        <section class="card p-6 space-y-4">
+          <h2 class="text-2xl font-bold border-l-4 border-blue-400 pl-3">크립토</h2>
             <!-- 비트코인 -->
-            <div class="card p-5 flex flex-col justify-between hover:shadow-lg transition">
-              <div class="flex items-center justify-between mb-3">
+            <div class="card p-4 hover:shadow-lg transition">
+              <div class="flex items-center justify-between">
                 <div class="text-lg font-semibold">비트코인</div>
                 <i class="fab fa-bitcoin text-orange-500"></i>
               </div>
-              <div>
-                <div class="text-2xl font-bold">$98,450</div>
-                <div class="text-sm positive">+2.45% (+$2,350)</div>
-              </div>
+              <div class="text-2xl font-bold mt-1">$98,450</div>
+              <div class="text-sm positive">+2.45% (+$2,350)</div>
             </div>
             <!-- 이더리움 -->
-            <div class="card p-5 flex flex-col justify-between hover:shadow-lg transition">
-              <div class="flex items-center justify-between mb-3">
+            <div class="card p-4 hover:shadow-lg transition">
+              <div class="flex items-center justify-between">
                 <div class="text-lg font-semibold">이더리움</div>
                 <i class="fab fa-ethereum text-blue-300"></i>
               </div>
-              <div>
-                <div class="text-2xl font-bold">$3,820</div>
-                <div class="text-sm positive">+1.88% (+$70)</div>
-              </div>
+              <div class="text-2xl font-bold mt-1">$3,820</div>
+              <div class="text-sm positive">+1.88% (+$70)</div>
             </div>
             <!-- 크립토 공포탐욕 지수 -->
-            <div class="card p-6 md:col-span-2">
-              <h3 class="text-lg font-semibold mb-4 flex items-center">
-                <i class="fas fa-skull-crossbones mr-2 text-purple-400"></i> 크립토 공포탐욕 지수
-              </h3>
-              <div class="text-4xl font-bold text-orange-400">74</div>
-              <div class="text-sm mt-1">탐욕</div>
-              <div class="mt-4 h-2 bg-gray-700 rounded-full overflow-hidden">
-                <div class="h-full bg-orange-400 w-[74%]"></div>
+            <div class="card p-4">
+              <h3 class="text-lg font-semibold text-center mb-2">크립토 공포 탐욕 지수 (Fear & Greed)</h3>
+              <div class="gauge-container">
+                <div class="gauge-semi-circle"></div>
+                <div class="gauge-mask"></div>
+                <div class="gauge-needle" style="transform: translateX(-50%) rotate(calc(74 * 1.8deg - 90deg));"></div>
+                <div class="gauge-center-point"></div>
+                 <div class="gauge-labels">
+                  <span>Extreme Fear</span>
+                  <span>Extreme Greed</span>
+                </div>
               </div>
+              <div class="text-center text-2xl font-bold mt-2">74 <span class="text-base">(Greed)</span></div>
             </div>
-          </div>
         </section>
-
       </div>
 
-      <!-- 하단 여유 공간 (나중에 실적 캘린더나 다른 섹션 들어갈 자리) -->
+      <!-- 하단 여유 공간 -->
       <div class="card p-6 text-center text-gray-400 mt-10">
         실적 발표 캘린더 / Money Flow / 기타 위젯 자리 (준비 중)
       </div>
-
     </main>
   </div>
 
