--- a/index.html
+++ b/index.html
@@ -265,62 +265,73 @@
     }
   </script>
 
-  <!-- 실제 가격 데이터 연동 스크립트 -->
-  <script>
-    const apiKey = 'd61e1n9r01quq5pfv0qgd61e1n9r01quq5pfv0r0'; // ← 여기 본인 Finnhub 키 넣기!!!
+<!-- ... 기존 head와 body 상단은 그대로 ... -->
 
-    // 종목별 티커 매핑
-    const assets = {
-      USDKRW: 'USDKRW',
-      GLD: 'GLD',
-      SLV: 'SLV',
-      SPX: 'SPX',          // S&P 500 지수
-      QQQ: 'QQQ',
-      KOSPI: 'KS11',       // 코스피 지수
-      KOSDAQ: 'KQ11',      // 코스닥 지수
-      BTC: 'BINANCE:BTCUSDT',
-      ETH: 'BINANCE:ETHUSDT'
-    };
+<!-- 실제 가격 데이터 연동 스크립트 (수정 버전) -->
+<script>
+  const apiKey = 'd61e1n9r01quqpfv0s0'; // ← 네가 준 키 그대로 넣음 (실제로는 숨기세요)
 
-    async function fetchPrice(symbol) {
-      try {
-        const res = await fetch(`https://finnhub.io/api/v1/quote?symbol=${symbol}&token=${apiKey}`);
-        const data = await res.json();
-        if (data.c === 0) return { price: 'N/A', change: 'N/A' };
-        const changePct = ((data.c - data.pc) / data.pc * 100).toFixed(2);
-        const colorClass = changePct >= 0 ? 'positive' : 'negative';
-        return {
-          price: data.c.toLocaleString(),
-          change: `<span class="${colorClass}">${changePct >= 0 ? '+' : ''}${changePct}%</span>`
-        };
-      } catch (e) {
-        return { price: '오류', change: '-' };
-      }
+  // 종목 티커 매핑 (현재 코드에 맞게 정리)
+  const assets = {
+    USDKRW: 'USDKRW',          // 원/달러
+    GLD: 'GLD',                // 금
+    SLV: 'SLV',                // 은
+    SPX: 'SPX',                // S&P 500
+    QQQ: 'QQQ',
+    KOSPI: 'KS11',             // 코스피 지수
+    KOSDAQ: 'KQ11',            // 코스닥 지수
+    BTC: 'BINANCE:BTCUSDT',
+    ETH: 'BINANCE:ETHUSDT'
+  };
+
+  // fetch 헬퍼 (지연 + 에러 처리 강화)
+  async function fetchPrice(symbol, delayMs = 0) {
+    if (delayMs > 0) await new Promise(r => setTimeout(r, delayMs));
+    try {
+      const res = await fetch(`https://finnhub.io/api/v1/quote?symbol=${symbol}&token=${apiKey}`);
+      if (!res.ok) throw new Error('API 응답 오류');
+      const data = await res.json();
+      if (data.c == 0 || !data.c) return { price: 'N/A', change: '-' };
+      const changePct = ((data.c - data.pc) / data.pc * 100).toFixed(2);
+      const colorClass = changePct >= 0 ? 'positive' : 'negative';
+      return {
+        price: data.c.toLocaleString(),
+        change: `<span class="${colorClass}">${changePct >= 0 ? '+' : ''}${changePct}%</span>`
+      };
+    } catch (e) {
+      console.error(`Fetch 오류 (${symbol}):`, e);
+      return { price: '오류', change: '-' };
     }
+  }
 
-    async function updatePrices() {
-      document.getElementById('update-time').textContent = '업데이트 중...';
+  // 순차적으로 호출하면서 800ms 간격 주기 (분당 60회 넘지 않음)
+  async function updatePrices() {
+    document.getElementById('update-time').textContent = '업데이트 중...';
 
-      // 원/달러 환율
-      const usdk = await fetchPrice(assets.USDKRW);
-      document.getElementById('usdkrw-price').textContent = usdk.price;
-      // 김프 계산을 위해 USDT도 가져오기 (간단히 BTCUSDT로 대체 가능, 실제로는 별도 로직 필요)
+    const keys = Object.keys(assets);
+    for (let i = 0; i < keys.length; i++) {
+      const key = keys[i];
+      const symbol = assets[key];
+      const data = await fetchPrice(symbol, i * 800); // 0.8초 간격
 
-      // 나머지 자산 업데이트
-      const symbols = ['GLD', 'SLV', 'SPX', 'QQQ', 'KOSPI', 'KOSDAQ', 'BTC', 'ETH'];
-      for (let key of symbols) {
-        const data = await fetchPrice(assets[key]);
+      if (key === 'USDKRW') {
+        document.getElementById('usdkrw-price').textContent = data.price;
+        document.getElementById('usdkrw-change').innerHTML = data.change;
+      } else {
         document.getElementById(`${key.toLowerCase()}-price`).textContent = data.price;
         document.getElementById(`${key.toLowerCase()}-change`).innerHTML = data.change;
       }
-
-      document.getElementById('update-time').textContent = `최종 업데이트: ${new Date().toLocaleTimeString('ko-KR')}`;
     }
 
-    // 페이지 로드 시 + 30초마다 업데이트
-    updatePrices();
-    setInterval(updatePrices, 30000);
-  </script>
+    document.getElementById('update-time').textContent = `최종 업데이트: ${new Date().toLocaleTimeString('ko-KR')}`;
+  }
+
+  // 초기 로드 + 60초마다 갱신 (분당 1회 → 한도 여유)
+  updatePrices();
+  setInterval(updatePrices, 60000);
+</script>
+
+<!-- ... 나머지 body와 script는 그대로 ... -->
 
 </body>
 </html>
