--- a/index.html
+++ b/index.html
@@ -139,6 +139,60 @@
       font-size: 10px;
       color: var(--text-secondary);
     }
+
+    /* ─────────────── 레이아웃 흔들림 방지 추가 스타일 ─────────────── */
+    .card {
+      min-height: 140px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    .card > div:first-child {
+      flex: 0 0 auto;
+    }
+
+    .card .mt-2 {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      min-height: 70px;
+    }
+
+    .text-2xl, .text-xl {
+      font-variant-numeric: tabular-nums;
+      letter-spacing: -0.025em;
+    }
+
+    .flex.items-baseline.justify-center {
+      min-height: 2.5rem;
+    }
+
+    .gauge-container {
+      min-height: 140px !important;
+    }
+
+    .section-title {
+      white-space: nowrap;
+    }
+
+    .number-container {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      max-width: 100%;
+    }
+
+    @media (min-width: 1024px) {
+      .card .text-2xl {
+        font-size: 1.875rem;
+      }
+      .card .text-xl {
+        font-size: 1.5rem;
+      }
+    }
+    /* ─────────────────────────────────────────────────────────────── */
   </style>
 </head>
 <body class="min-h-screen flex flex-col">
@@ -236,7 +290,7 @@
               </div>
               <!-- 금 공포탐욕 지수 -->
               <div class="card p-4">
-                <h3 class="text-lg font-semibold text-center mb-2">금 공포탐욕 지수</h3>
+                <h3 class="text-lg font-semibold text-center mb-2">공포 탐욕 지수</h3>
                 <div class="gauge-container">
                   <div class="gauge-semi-circle"></div>
                   <div class="gauge-mask"></div>
@@ -283,7 +337,7 @@
               </div>
               <!-- 미국 주식 공포탐욕 지수 -->
               <div class="card p-4">
-                <h3 class="text-lg font-semibold text-center mb-2">공포탐욕 지수</h3>
+                <h3 class="text-lg font-semibold text-center mb-2">공포 탐욕 지수</h3>
                 <div class="gauge-container">
                   <div class="gauge-semi-circle"></div>
                   <div class="gauge-mask"></div>
@@ -330,7 +384,7 @@
               </div>
               <!-- 한국 주식 공포탐욕 지수 -->
               <div class="card p-4">
-                <h3 class="text-lg font-semibold text-center mb-2">공포탐욕 지수</h3>
+                <h3 class="text-lg font-semibold text-center mb-2">공포 탐욕 지수</h3>
                 <div class="gauge-container">
                   <div class="gauge-semi-circle"></div>
                   <div class="gauge-mask"></div>
@@ -357,7 +411,7 @@
               <div class="card p-4 hover:shadow-lg transition text-center flex-grow flex flex-col justify-between">
                 <div class="text-lg font-semibold">비트코인</div>
                 <div class="mt-2">
-                  <div class="flex items-baseline justify-center space-x-4 flex-wrap">
+                  <div class="flex items-baseline justify-center space-x-4 flex-wrap number-container">
                     <div class="text-xl font-bold">$98,450</div>
                     <div class="text-lg font-bold ml-2">₩135,245,000</div>
                   </div>
@@ -371,7 +425,7 @@
               <div class="card p-4 hover:shadow-lg transition text-center flex-grow flex flex-col justify-between">
                 <div class="text-lg font-semibold">이더리움</div>
                 <div class="mt-2">
-                  <div class="flex items-baseline justify-center space-x-4 flex-wrap">
+                  <div class="flex items-baseline justify-center space-x-4 flex-wrap number-container">
                     <div class="text-xl font-bold">$3,820</div>
                     <div class="text-lg font-bold ml-2">₩5,145,000</div>
                   </div>
@@ -383,7 +437,7 @@
               </div>
               <!-- 공포탐욕 지수 -->
               <div class="card p-4">
-                <h3 class="text-lg font-semibold text-center mb-2">크립토 공포탐욕 지수</h3>
+                <h3 class="text-lg font-semibold text-center mb-2">공포 탐욕 지수</h3>
                 <div class="gauge-container">
                   <div class="gauge-semi-circle"></div>
                   <div class="gauge-mask"></div>
